# engram

./: .dockerignore  .gitignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: config.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  test.yml
architecture/ann-index/: index.html
architecture/benchmarks/: index.html
architecture/overview/: index.html
architecture/retrieval/: index.html
architecture/surprise/: index.html
benchmarks/longmemeval/: run_engram.py
changelog/: index.html
docs/: CNAME  changelog.md  index.md
docs/architecture/: ann-index.md  benchmarks.md  overview.md  retrieval.md  surprise.md
docs/getting-started/: claude-code.md  installation.md  quickstart.md
docs/guides/: client-configs.md  docker.md  drift-detection.md  embedding-backends.md  entity-graph.md  export-import.md  memory-lifecycle.md  multi-agent.md  postgres-migration.md  retrieval-pipeline.md  session-continuity.md
docs/maintainers/: releasing.md  triage.md
docs/overrides/: main.html
docs/reference/: cli.md  config.md  mcp-tools.md  rest-api.md
docs/tutorials/: build-an-agent.md  negative-knowledge.md  scan-a-codebase.md
engram/: __init__.py  __main__.py  ann_index.py  benchmark.py  cli.py  codebase.py  communities.py  compress.py  config.py  consolidator.py  conversations.py  dedup.py  deep_retrieval.py  demo.py  drift.py  embeddings.py  entities.py  evolution.py  extractor.py  formats.py  hopfield.py  intelligence.py  layers.py  lifecycle.py  llm.py  mcp_server.py  patterns.py  quantize.py  retrieval.py  skill_select.py  store.py  surprise.py
engram/web/: app.py  events.py  routes.py
examples/: README.md  agent-patterns.md  api-embeddings.py  claude-code-setup.md  codebase-scan.py  custom-agent.py  drift-detection.py  entity-graph.py  export-import.py  hooks-setup.md  multi-agent.py  negative-knowledge.py  openai-compatible.py  python-client.py
getting-started/claude-code/: index.html
getting-started/installation/: index.html
hooks/: drift_hook.sh  save_hook.sh
search/: search_index.json
site/: index.html
tests/: conftest.py  test_ann_index.py  test_config.py  test_embeddings.py  test_intelligence.py  test_retrieval.py  test_store.py  test_surprise.py
(+23 files in other folders)
