[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-memory-system"
version = "0.2.0"
description = "Cognitive memory system with hybrid retrieval, entity graphs, and memory lifecycle. 98.1% R@5 on LongMemEval."
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "raya" },
]
keywords = ["memory", "retrieval", "embeddings", "rag", "mcp", "ai", "cognitive", "hnsw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24.0",
    "hnswlib>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/raya-ac/engram"
Repository = "https://github.com/raya-ac/engram"
Issues = "https://github.com/raya-ac/engram/issues"

[project.scripts]
engram = "engram.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
voyage = ["voyageai>=0.3.0"]
openai = ["openai>=1.30.0"]
gemini = ["google-genai>=1.0.0"]
api = ["voyageai>=0.3.0", "openai>=1.30.0", "google-genai>=1.0.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore::DeprecationWarning:sys",
]

[tool.hatch.build.targets.wheel]
packages = ["engram"]
